--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,18 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/dd3nxxiaw/image/upload/v1673610586/Banner_skl_ulxqhl.jpg);">
   <div class="container">
     <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
     <p>Change your life and learn to code at one of our campuses around the world.</p>
-    <a class="btn btn-flat" href="#">Apply now</a>
+    <li class="nav-item" style="font-size:24px;color:$azul_skl!">
+      <%= link_to "Gruas",gruas_path ,class: "nav-link" %>
+    </li>
+     <li class="nav-item" style="font-size:24px;color:$azul_skl!">
+      <%= link_to "Tractores y agricola",tractors_path ,class: "nav-link" %>
+    </li>
+     <li class="nav-item" style="font-size:24px;color:$azul_skl!">
+      <%= link_to "Maquinaria Pesada",maquinariapesadas_path ,class: "nav-link" %>
+    </li>
+     <li class="nav-item" style="font-size:24px;color:$azul_skl!">
+      <%= link_to "Equipos a la venta",ventas_path ,class: "nav-link" %>
+    </li>
   </div>
 </div>
