--- a/app/views/gruas/new.html.erb
+++ b/app/views/gruas/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <div class="container">
 <H3>Gruas</H3>
 <%= simple_form_for( @grua,
@@ -35,9 +36,9 @@
 
   </div>
 
-  <div class="btn btn-flat" style="color:white">
+  <div class="btn btn-flat">
     <%= f.button :submit, "Crear grua" %>
   </div>
 <% end %>
-
+</div>
 </div>
