--- a/app/views/gruas/show.html.erb
+++ b/app/views/gruas/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <div class="container">
   <div class="card-product">
     <%= cl_image_tag @grua.photo.key, height: 300, width: 400, crop: :fill %>
@@ -8,4 +9,5 @@
       <p><%= @grua.disponible %></p>
     </div>
   </div>
+</div>
 </div>
