--- a/app/views/maquinariapesadas/new.html.erb
+++ b/app/views/maquinariapesadas/new.html.erb
@@ -1,5 +1,6 @@
+<div class="container-fluid">
 <div class="container">
-<H3>Mquinarias</H3>
+<H3>Maquinaria pesada</H3>
 <%= simple_form_for( @maquinariapesada,
   data: {turbo: false}) do |f| %>
 
@@ -35,9 +36,10 @@
 
   </div>
 
-  <div class="btn btn-flat" style="color:white">
-    <%= f.button :submit, "Crear Mquinaria" %>
+  <div class="btn btn-flat" >
+    <%= f.button :submit, "Crear Maquinaria pesada" %>
   </div>
 <% end %>
 
+</div>
 </div>
