--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,16 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/dd3nxxiaw/image/upload/v1673610586/Banner_skl_ulxqhl.jpg);">
   <div class="container">
-    <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
-    <p>Change your life and learn to code at one of our campuses around the world.</p>
-    <li class="nav-item" style="font-size:24px;color:$azul_skl!">
-      <%= link_to "Gruas",gruas_path ,class: "nav-link" %>
-    </li>
-     <li class="nav-item" style="font-size:24px;color:$azul_skl!">
-      <%= link_to "Tractores y agricola",tractors_path ,class: "nav-link" %>
-    </li>
-     <li class="nav-item" style="font-size:24px;color:$azul_skl!">
-      <%= link_to "Maquinaria Pesada",maquinariapesadas_path ,class: "nav-link" %>
-    </li>
-     <li class="nav-item" style="font-size:24px;color:$azul_skl!">
-      <%= link_to "Equipos a la venta",ventas_path ,class: "nav-link" %>
+    <h1>SKL tenemos arriendo y venta de equipos con  <strong>el mejor servicio</strong> y la mejor <strong>continuidad operativa</strong> del mercado!</h1>
+    <p>Somos una empresa dedicada al arriendo de maquinarias ,principalmente lo relacionado a la
+logística interna de las empresas , enfocados en grúas horquilla y su gran variedad de aplicaciones
+.
+Nos aseguramos día a día de brindar un servicio impecable que este a la altura de nuestros
+clientes, mantener un equipo de trabajo e infraestructura que asegure un servicio de primer nivel
+,incorporar nuevas tecnologías y mecanismos de trabajo más eficientes y rápidos .
+Nos caracterismos por asegurar continuidad de servicio , atención personalizada en conjunto con
+nuestras propuestas de mejora continua del producto y servicio.
+</p>
+
     </li>
   </div>
 </div>
