--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,12 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="https://www.instagram.com/nutrialic.ig/"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.facebook.com/Nutrialic"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.instagram.com/Skl.ig/"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/Skl"><i class="fab fa-facebook"></i></a>
             <p class="notice"><%= notice %></p>
   </div>
-
-  <div class="footer-copyright">
-    En Nutrialic <i class="fas fa-heart"></i> comer bien
+    <div class="footer-copyright">
+    En SKL nuestro compromiso es la calidad
   </div>
+  <div class="footer-copyright">Power by JPTprogram</div>
+
 </div>
