--- a/app/views/tractors/index.html.erb
+++ b/app/views/tractors/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <div class="container">
   <div class="cards">
       <% @tractors.each do |tractor|  %>
@@ -13,3 +14,4 @@
         </div>
     <% end %>
   </div>
+</div>
