--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,18 +1,24 @@
 .footer {
-  background: #F4F4F4;
+  background: $azul_skl;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: white;
+    position: absolute;
+    bottom: 0;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    width: 100%;
+
 }
 .footer-links {
   display: flex;
   align-items: center;
 }
 .footer-links a {
-  color: black;
+  color: white;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
