--- a/app/views/gruas/index.html.erb
+++ b/app/views/gruas/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <div class="container">
   <div class="cards">
       <% @gruas.each do |grua|  %>
@@ -13,3 +14,4 @@
         </div>
     <% end %>
   </div>
+</div>
