--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
+    <%= link_to equipos_path, class: "navbar-brand" do %>
       <%= image_tag "https://res.cloudinary.com/dd3nxxiaw/image/upload/v1673610580/logo_skl_bagtzk.jpg" %>
     <% end %>
 
@@ -11,22 +11,43 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
-          <li class="nav-item" style="font-size:24px;color:$azul_skl!">
-            <%= link_to "Grua ", grua_new_path, class: "nav-link" %>
+          <li  style="font-size:24px;color:$azul_skl!">
+            <%= link_to "Grua ", new_grua_path, class: "btn-flat" %>
           </li>
-          <li class="nav-item" style="font-size:24px;color:$azul_skl!">
-            <%= link_to "Maquinaria Pesada", maquinariapesada_new_path, class: "nav-link" %>
+          <li  style="font-size:24px;color:$azul_skl!">
+            <%= link_to "Maquinaria Pesada", new_maquinariapesada_path, class: "btn-flat" %>
           </li>
-          <li class="nav-item" style="font-size:24px;color:$azul_skl!">
-            <%= link_to "Tractores", tractor_new_path, class: "nav-link" %>
+          <li  style="font-size:24px;color:$azul_skl!">
+            <%= link_to "Tractores", new_tractor_path, class: "btn-flat" %>
           </li>
-          <li class="nav-item" style="font-size:24px;color:$azul_skl!">
-            <%= link_to "Ventas", venta_new_path, class: "nav-link" %>
+            <li  style="font-size:24px;color:$azul_skl!;">
+            <%= link_to "Repuestos", new_repuesto_path, class: "btn-flat" %>
           </li>
-        <% else %>
-            <li class="nav-item" style="font-size:24px;color:$azul_skl!">
-              <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <li  style="font-size:24px;color:$azul_skl!;">
+            <%= link_to "Equipos Venta", new_vento_path, class: "btn-flat-rojo" %>
+          </li>
+          <li style="font-size:24px;color:$azul_skl!;">
+              <%= link_to "Salir", destroy_user_session_path, data: {turbo_method: :delete}, class: "btn-flat" %>
             </li>
+        <% else %>
+          <li  style="font-size:24px;color:$azul_skl!">
+            <%= link_to "Gruas",gruas_path ,class: "btn-flat" %>
+          </li>
+          <li  style="font-size:24px;color:$azul_skl!">
+            <%= link_to "Tractores y agricola",tractors_path ,class: "btn-flat" %>
+          </li>
+          <li  style="font-size:24px;color:$azul_skl!">
+            <%= link_to "Maquinaria Pesada",maquinariapesadas_path ,class: "btn-flat" %>
+          </li>
+          <li  style="font-size:24px;color:$azul_skl!;">
+            <%= link_to "Repuestos", repuestos_path, class: "btn-flat" %>
+          </li>
+          <li  style="font-size:24px;color:$azul_skl!">
+            <%= link_to "Venta de equipos",ventos_path ,class: "btn-flat-rojo" %>
+          </li>
+          <li  style="font-size:24px;color:$azul_skl!;">
+            <%= link_to "Login", new_user_session_path, class: "btn-flat" %>
+          </li>
 
 
 
