--- a/app/views/gruas/show.html.erb
+++ b/app/views/gruas/show.html.erb
@@ -5,7 +5,7 @@
     <div class="card-product-infos">
       <h2><%= @grua.modelo %></h2>
       <h2><%= @grua.marca %></h2>
-      <h2><%= @grua.link %></h2>
+      <a href="<%= @grua.link.to_s%>" style="font-size: 16px">Ficha tecnica </a>
       <p><%= @grua.disponible %></p>
     </div>
   </div>
