--- a/app/views/maquinariapesadas/show.html.erb
+++ b/app/views/maquinariapesadas/show.html.erb
@@ -5,7 +5,7 @@
     <div class="card-product-infos">
       <h2><%= @maquinariapesada.modelo %></h2>
       <h2><%= @maquinariapesada.marca %></h2>
-      <h2><%= @maquinariapesada.link %></h2>
+      <a href="<%= @maquinariapesada.link.to_s%>" style="font-size: 16px">Ficha tecnica </a>
       <p><%= @maquinariapesada.disponible %></p>
     </div>
   </div>
