--- a/app/views/tractors/show.html.erb
+++ b/app/views/tractors/show.html.erb
@@ -5,7 +5,7 @@
     <div class="card-product-infos">
       <h2><%= @tractor.modelo %></h2>
       <h2><%= @tractor.marca %></h2>
-      <h2><%= @tractor.link %></h2>
+      <a href="<%= @tractor.link.to_s%>" style="font-size: 16px">Ficha tecnica </a>
       <p><%= @tractor.disponible %></p>
     </div>
   </div>
