--- a/app/views/gruas/new.html.erb
+++ b/app/views/gruas/new.html.erb
@@ -1,58 +1,35 @@
 <div class="container-fluid">
-<div class="container">
-<H3>Gruas</H3>
-<%= simple_form_for( @grua,
-  data: {turbo: false}) do |f| %>
+  <div class="container">
+    <H3>Gruas</H3>
+    <%= simple_form_for( @grua,
+      data: {turbo: false}) do |f| %>
 
-  <%= f.error_notification %>
+      <%= f.error_notification %>
 
-  <div class="form-inputs">
+      <div class="form-inputs">
+        <%= f.input :marca, label: "Marca",
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "marca" }%>
+        <%= f.input :modelo, label: "Modelo ",
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "modelo" }%>
+        <%= f.input :disponible, label: "disponibilidad: ",
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "disponible" }%>
+        <%= f.input :link, label: "link a especificaciones ",
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "link" }%>
+        <%= f.select :tipo, Grua::TYPES, {}, {class: "form-control"} %>
+        <%= f.input :photo, as: :file %>
+      </div>
 
-              <%# NEW INPUTS  %>
-    <%= f.input :marca, label: "Marca",
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "marca" }%>
-
-    <%= f.input :modelo, label: "Modelo ",
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "modelo" }%>
-
-    <%= f.input :disponible, label: "disponibilidad: ",
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "disponible" }%>
-
-    <%= f.input :link, label: "link a especificaciones ",
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "link" }%>
-
-     <%= f.input :electrica, as: :boolean,  label: "electrica",
-                input_html: { autocomplete: "electrica" }%>
-
-     <%= f.input :combustion, as: :boolean, label: "combustion",
-                input_html: { autocomplete: "combustion" }%>
-
-     <%= f.input :apilador, as: :boolean, label: "apilador",
-                input_html: { autocomplete: "apilador" }%>
-
-     <%= f.input :transpaleta,as: :boolean, label: "transpaleta",
-                input_html: { autocomplete: "transpaleta" }%>
-
-    <%= f.input :photo, as: :file %>
-
-
-
-
-
-
+      <div class="btn btn-flat">
+        <%= f.button :submit, "Crear grua" %>
+      </div>
+    <% end %>
   </div>
-
-  <div class="btn btn-flat">
-    <%= f.button :submit, "Crear grua" %>
-  </div>
-<% end %>
-</div>
 </div>
