--- a/app/views/ventos/new.html.erb
+++ b/app/views/ventos/new.html.erb
@@ -29,6 +29,11 @@
                     autofocus: true,
                     input_html: { autocomplete: "link" }%>
 
+                <%= f.input :descripcion, label: "Descripcion ",
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "descripcion" }%>
+
             <%= f.input :precio, label: "Precio: ",
                     required: true,
                     autofocus: true,
