--- a/app/assets/stylesheets/components/_card-trip.scss
+++ b/app/assets/stylesheets/components/_card-trip.scss
@@ -8,6 +8,7 @@
   border-radius: 10px;
 }
 
+
 .card-trip > img {
   height: auto;
   max-width: 100%;
@@ -50,5 +51,61 @@
 }
 
 .card-trip-infos a:hover {
+  color:$rojo_skl;
+}
+
+.card-product {
+  overflow: hidden;
+  background:  #fafafa;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  width: 700px;
+  height: 100%;
+  margin: 0;
+  border-radius: 10px;
+
+}
+
+.card-product > img {
+  height: auto;
+  max-width: 100%;
+  padding: 12px;
+}
+
+.card-product h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.card-product p {
+  font-size: 12px;
+  opacity: .7;
+  margin: 0;
+}
+
+
+.card-product .card-product-infos {
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  position: relative;
+  flex-direction: column;
+}
+
+.card-product-infos .card-product-user {
+  position: absolute;
+  right: 16px;
+  top: -20px;
+  width: 40px;
+}
+
+.card-product-infos a {
+  text-decoration: none;
+  color:$verde_skl;
+  font-size: 24px;
+}
+
+.card-product-infos a:hover {
   color:$rojo_skl;
 }
