--- a/app/views/gruas/index.html.erb
+++ b/app/views/gruas/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container-fluid">
 <div class="container">
-  <h1>Combustion:</h1>
+  <h1 style="margin-top: 16px;">Combustion:</h1>
     <div class="cards">
       <% @gruas.each do |grua|  %>
-          <% if grua.category == "combustion" %>
+          <% if grua.category == "Combustion" %>
             <div class="card-trip img-fluid">
               <%= cl_image_tag(grua.photo.key,:aspect_ratio=>"1.0", width: 350, height: 300,:crop=>"fill") %>
               <div class="card-trip-infos">
@@ -18,10 +18,10 @@
       <% end %>
     </div>
 
-  <h1>Electrica:</h1>
+  <h1 style="margin-top: 16px;">Electricas:</h1>
     <div class="cards">
       <% @gruas.each do |grua|  %>
-        <% if grua.category == "combustion" %>
+        <% if grua.category == "Electrica" %>
         <div class="card-trip img-fluid">
          <%= cl_image_tag(grua.photo.key,:aspect_ratio=>"1.0", width: 350, height: 300,:crop=>"fill") %>
          <div class="card-trip-infos">
@@ -35,11 +35,11 @@
       <% end %>
     <% end %>
     </div>
-  <h1>Transpaleta:</h1>
+  <h1 style="margin-top: 16px;">Transpaletas:</h1>
     <div class="cards">
 
       <% @gruas.each do |grua|  %>
-        <% if grua.category == "combustion" %>
+        <% if grua.category == "Transpaleta" %>
 
         <div class="card-trip img-fluid">
          <%= cl_image_tag(grua.photo.key,:aspect_ratio=>"1.0", width: 350, height: 300,:crop=>"fill") %>
@@ -54,6 +54,28 @@
       <% end %>
     <% end %>
   </div>
+
+  <h1 style="margin-top: 16px;">Apiladores:</h1>
+    <div class="cards">
+
+      <% @gruas.each do |grua|  %>
+        <% if grua.category == "Apiladores" %>
+
+        <div class="card-trip img-fluid">
+         <%= cl_image_tag(grua.photo.key,:aspect_ratio=>"1.0", width: 350, height: 300,:crop=>"fill") %>
+         <div class="card-trip-infos">
+            <a><%= link_to " #{grua.modelo}"  , grua_path(grua) %></a>
+            <p> Marca: <%= grua.marca %></h2>
+            <p> disponibilidad: <%= grua.disponible %></h6>
+            <p></p>
+            <a href="<%= grua.link.to_s%>" style="font-size: 16px">Ficha tecnica </a>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+
+
 
   </div>
 </div>
