--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,9 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/dd3nxxiaw/image/upload/v1673610586/Banner_skl_ulxqhl.jpg);">
   <div class="container">
-    <h1>SKL tenemos arriendo y venta de equipos con  <strong>el mejor servicio</strong> y la mejor <strong>continuidad operativa</strong> del mercado!</h1>
+
+
+<% unless user_signed_in? %>
+<h1>SKL tenemos arriendo y venta de equipos con  <strong>el mejor servicio</strong> y la mejor <strong>continuidad operativa</strong> del mercado!</h1>
     <p>Somos una empresa dedicada al arriendo de maquinarias ,principalmente lo relacionado a la
 logística interna de las empresas , enfocados en grúas horquilla y su gran variedad de aplicaciones
 .
@@ -10,6 +13,32 @@ clientes, mantener un equipo de trabajo e infraestructura que asegure un servici
 Nos caracterismos por asegurar continuidad de servicio , atención personalizada en conjunto con
 nuestras propuestas de mejora continua del producto y servicio.
 </p>
+<% end %>
+
+    <div >
+      <ul >
+        <% if user_signed_in? %>
+          <li  style="font-size:24px;color:$azul_skl!;margin-top: 16px;">
+            <%= link_to "Ver Gruas",gruas_path ,class: "btn-flat" %>
+          </li>
+          <li  style="font-size:24px;color:$azul_skl!;margin-top: 16px;">
+            <%= link_to "Ver Tractores y agricola",tractors_path ,class: "btn-flat" %>
+          </li>
+          <li  style="font-size:24px;color:$azul_skl!;margin-top: 16px;">
+            <%= link_to "Ver Maquinaria Pesada",maquinariapesadas_path ,class: "btn-flat" %>
+          </li>
+          <li  style="font-size:24px;color:$azul_skl!;margin-top: 16px;">
+            <%= link_to "Ver Repuestos", repuestos_path, class: "btn-flat" %>
+          </li>
+          <li  style="font-size:24px;color:$azul_skl!;margin-top: 16px;">
+            <%= link_to "Ver Venta de equipos",ventos_path ,class: "btn-flat-rojo" %>
+          </li>
+          <li  style="font-size:24px;color:$azul_skl!;margin-top: 16px;">
+        <%= link_to "Ver Novedades", novedads_path, class: "btn-flat" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
 
     </li>
   </div>
