--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,19 +12,22 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li  style="font-size:24px;color:$azul_skl!">
-            <%= link_to "Grua ", new_grua_path, class: "btn-flat" %>
+            <%= link_to "Crear Grua ", new_grua_path, class: "btn-flat" %>
           </li>
           <li  style="font-size:24px;color:$azul_skl!">
-            <%= link_to "Maquinaria Pesada", new_maquinariapesada_path, class: "btn-flat" %>
+            <%= link_to "Crear Maquinaria Pesada", new_maquinariapesada_path, class: "btn-flat" %>
           </li>
           <li  style="font-size:24px;color:$azul_skl!">
-            <%= link_to "Tractores", new_tractor_path, class: "btn-flat" %>
+            <%= link_to "Crear Tractores", new_tractor_path, class: "btn-flat" %>
           </li>
             <li  style="font-size:24px;color:$azul_skl!;">
-            <%= link_to "Repuestos", new_repuesto_path, class: "btn-flat" %>
+            <%= link_to "Crear Repuestos", new_repuesto_path, class: "btn-flat" %>
           </li>
           <li  style="font-size:24px;color:$azul_skl!;">
-            <%= link_to "Equipos Venta", new_vento_path, class: "btn-flat-rojo" %>
+            <%= link_to "Crear Equipos Venta", new_vento_path, class: "btn-flat-rojo" %>
+          </li>
+          <li  style="font-size:24px;color:$azul_skl!;">
+        <%= link_to "Crear Novedad", new_novedad_path, class: "btn-flat" %>
           </li>
           <li style="font-size:24px;color:$azul_skl!;">
               <%= link_to "Salir", destroy_user_session_path, data: {turbo_method: :delete}, class: "btn-flat" %>
@@ -44,6 +47,9 @@
           </li>
           <li  style="font-size:24px;color:$azul_skl!">
             <%= link_to "Venta de equipos",ventos_path ,class: "btn-flat-rojo" %>
+          </li>
+          <li  style="font-size:24px;color:$azul_skl!;">
+        <%= link_to "Novedades", novedads_path, class: "btn-flat" %>
           </li>
           <li  style="font-size:24px;color:$azul_skl!;">
             <%= link_to "Login", new_user_session_path, class: "btn-flat" %>
