--- a/app/views/ventos/show.html.erb
+++ b/app/views/ventos/show.html.erb
@@ -1,15 +1,21 @@
 <div class="container-fluid">
-  <div class="container">
-    <div class="card-product">
-      <%= cl_image_tag @vento.photo.key, height: 300, width: 400, crop: :fill %>
-      <div class="card-product-infos">
-        <h2><%= @vento.modelo %></h2>
-        <h2><%= @vento.marca %></h2>
-        <a href="<%= @vento.link.to_s%>" style="font-size: 16px">Ficha tecnica </a>
-        <h2><%= @vento.precio %></h2>
-        <p><%= @vento.disponible %></p>
-
-      </div>
+<div class="container" style="  display: flex;justify-content: center;">
+  <div class="card-product" style="margin-top: 16px;">
+    <%= cl_image_tag @vento.photo.key, height: 600, width: 800, crop: :fill %>
+    <div class="card-product-infos">
+      <h2 style="font-size: 24px"><%= @vento.modelo %></h2>
+      <h2 style="font-size: 24px"><%= @vento.marca %></h2>
+      <h2 style="font-size: 24px"><%= @vento.precio %></h2>
+      <a href="<%= @vento.link.to_s%>" style="font-size: 16px">Ficha tecnica </a>
+      <p style="font-size: 14px;margin-bot: 12px;"><%= @vento.disponible %></p>
+    </div>
+  </div>
+  <div class="card-product" style="margin-top: 16px;margin-left: 16px;padding: 12px;">
+  <h3 h2 style="font-size:24px"> Descripcion: </h3>
+   <h3 h2 style="font-size:24px"> <%= @vento.descripcion %></h3>
   </div>
 </div>
+  <% if user_signed_in? %>
+  <%= button_to "Delete", vento_path(@vento), method: :delete, data: { confirm: "Are you sure?" } %>
+  <% end %>
 </div>
