--- a/app/views/gruas/show.html.erb
+++ b/app/views/gruas/show.html.erb
@@ -15,6 +15,6 @@
   </div>
 </div>
   <% if user_signed_in? %>
-  <%= button_to "Delete", grua_path(@grua), method: :delete, data: { confirm: "Are you sure?" } %>
+   <%= link_to "Delete", grua_path(@grua), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this grua?" } %>
   <% end %>
 </div>
