--- a/app/views/gruas/index.html.erb
+++ b/app/views/gruas/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 <div class="container">
-  <h1 style="margin-top: 16px;">Combustion:</h1>
+  <h1 style="margin-top: 16px;font-size: 18px">Combustion:</h1>
     <div class="cards">
       <% @gruas.each do |grua|  %>
           <% if grua.category == "Combustion" %>
@@ -18,7 +18,7 @@
       <% end %>
     </div>
 
-  <h1 style="margin-top: 16px;">Electricas:</h1>
+  <h1 style="margin-top: 16px;font-size: 18px">Electricas:</h1>
     <div class="cards">
       <% @gruas.each do |grua|  %>
         <% if grua.category == "Electrica" %>
@@ -35,7 +35,7 @@
       <% end %>
     <% end %>
     </div>
-  <h1 style="margin-top: 16px;">Transpaletas:</h1>
+  <h1 style="margin-top: 16px;font-size: 18px">Transpaletas:</h1>
     <div class="cards">
 
       <% @gruas.each do |grua|  %>
@@ -55,7 +55,7 @@
     <% end %>
   </div>
 
-  <h1 style="margin-top: 16px;">Apiladores:</h1>
+  <h1 style="margin-top: 16px;font-size: 18px">Apiladores:</h1>
     <div class="cards">
 
       <% @gruas.each do |grua|  %>
