add whatsapp button, missing correct number and message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <a class="whatsapp-button" href="https://wa.me/15551234567?text=Hello%20there!" target="_blank">Chat on WhatsApp</a>
+    <a href="https://wa.me/525521529085?text=Hello%20there!" target="_blank">
+      <i class="fa-brands fa-whatsapp whatsapp-button"></i>
+    </a>
     <%= yield %>
     <%= render "shared/footer" %>
   </body>
