--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -62,11 +62,22 @@ background-color: white;
 }
 
 .whatsapp-button {
-  display: inline-block;
+  position: fixed;
+  display: absolute;
   background-color: #25D366;
   color: white;
-  padding: 10px 20px;
-  border-radius: 4px;
+  padding: 10px 15px;
+  border-radius: 50%;
   text-decoration: none;
   font-weight: bold;
+  bottom: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+  transition: transform 0.3s ease;
+  font-size: 2rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.whatsapp-button:hover {
+  transform: translateY(-50%) scale(0.9);
 }
