--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,3 +43,6 @@ nuestras propuestas de mejora continua del producto y servicio.
     </li>
   </div>
 </div>
+
+<h1>Contactanos</h1>
+<%= render partial: 'contact/form', locals: { contact: @contact } %>
