--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,6 +7,6 @@
     <div class="footer-copyright">
     En SKL nuestro compromiso es la calidad
   </div>
-  <div class="footer-copyright">Power by JPTprogram</div>
+  <div class="footer-copyright">Powered by JPTprogram</div>
 
 </div>
