whatsapp button ready

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <a href="https://wa.me/525521529085?text=Hello%20there!" target="_blank">
+    <a href="https://wa.me/56987550756?text=Hola!%20Me%20gustaría%20recibir%20información!" target="_blank">
       <i class="fa-brands fa-whatsapp whatsapp-button"></i>
     </a>
     <%= yield %>
