main layout ready

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -223,163 +223,12 @@
 <!-- PROCESO (FEATURES) END -->
 
 <!-- CLIENTES -->
-<section class="clients-style-two">
-    <div class="auto-container">
-        <div class="sec-title text-center style-two mb-70">
-            <h2>Nuestros Clientes</h2>
-        </div>
-        <div class="logo-inner">
-            <ul class="logo-box logo-box-one clearfix">
-                <li><figure class="image-box"><a href="index.html"><img src="/assets/landing_images/clients/clients-logo-6.png" alt=""></a></figure></li>
-                <li><figure class="image-box"><a href="index.html"><img src="/assets/landing_images/clients/clients-logo-7.png" alt=""></a></figure></li>
-                <li><figure class="image-box"><a href="index.html"><img src="/assets/landing_images/clients/clients-logo-8.png" alt=""></a></figure></li>
-                <li><figure class="image-box"><a href="index.html"><img src="/assets/landing_images/clients/clients-logo-9.png" alt=""></a></figure></li>
-            </ul>
-            <ul class="logo-box logo-box-two clearfix">
-                <li><figure class="image-box"><a href="index.html"><img src="/assets/landing_images/clients/clients-logo-10.png" alt=""></a></figure></li>
-                <li><figure class="image-box"><a href="index.html"><img src="/assets/landing_images/clients/clients-logo-11.png" alt=""></a></figure></li>
-                <li><figure class="image-box"><a href="index.html"><img src="/assets/landing_images/clients/clients-logo-12.png" alt=""></a></figure></li>
-            </ul>
-        </div>
-    </div>
-</section>
-<!-- CLIENTES END-->
-
-
-<!-- TESTIMONIOS -->
-<section class="testimonial-style-two">
-    <div class="title-inner bg-color-3">
-        <div class="pattern-layer" style="background-image: url(/assets/landing_images/shape/shape-15.png);"></div>
-    </div>
-    <div class="lower-content">
-        <div class="auto-container">
-            <div class="inner-content">
-                <div class="testimonial-carousel-2 owl-carousel owl-theme owl-dots-none nav-style-one">
-                    <div class="testimonial-content">
-                        <div class="inner-box">
-                            <figure class="image-box"><img src="/assets/landing_images/resource/testimonial-1.jpg" alt=""></figure>
-                            <div class="content-box">
-                                <div class="icon-box" style="background-image: url(/assets/landing_images/icons/icon-4.png);"></div>
-                                <div class="text">
-                                    <p>As a growing company, we found in Naxly expertise in data science invaluble In almost two years of cooperation, they’ve helped us.</p>
-                                </div>
-                                <div class="author-info">
-                                    <h4>Dedrew Kowzel</h4>
-                                    <span class="designation">CEO & Founder - Soft Solution</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testimonial-content">
-                        <div class="inner-box">
-                            <figure class="image-box"><img src="/assets/landing_images/resource/testimonial-2.jpg" alt=""></figure>
-                            <div class="content-box">
-                                <div class="icon-box" style="background-image: url(/assets/landing_images/icons/icon-4.png);"></div>
-                                <div class="text">
-                                    <p>As a growing company, we found in Naxly expertise in data science invaluble In almost two years of cooperation, they’ve helped us.</p>
-                                </div>
-                                <div class="author-info">
-                                    <h4>Donal Archar</h4>
-                                    <span class="designation">CEO & Founder - Soft Solution</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testimonial-content">
-                        <div class="inner-box">
-                            <figure class="image-box"><img src="/assets/landing_images/resource/testimonial-3.jpg" alt=""></figure>
-                            <div class="content-box">
-                                <div class="icon-box" style="background-image: url(/assets/landing_images/icons/icon-4.png);"></div>
-                                <div class="text">
-                                    <p>As a growing company, we found in Naxly expertise in data science invaluble In almost two years of cooperation, they’ve helped us.</p>
-                                </div>
-                                <div class="author-info">
-                                    <h4>Jams Shan</h4>
-                                    <span class="designation">CEO & Founder - Soft Solution</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- TESTIMONIOS END -->
+  <!-- <%#= render 'pages/shared/clientes' %> -->
+<!-- CLIENTES END -->
 
 <!-- NUEVOS -->
-<section class="news-section style-two">
-    <div class="auto-container">
-        <div class="sec-title text-center style-two mb-60">
-            <p>News & Updates</p>
-            <h2>Latest thinking in AI and our<br />company news</h2>
-            <div class="decor" style="background-image: url(/assets/landing_images/icons/decor-1.png);"></div>
-        </div>
-        <div class="row clearfix">
-            <div class="col-lg-4 col-md-6 col-sm-12 news-block">
-                <div class="news-block-one wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
-                    <div class="inner-box">
-                        <figure class="image-box">
-                            <img src="/assets/landing_images/news/news-1.jpg" alt="">
-                            <a href="/assets/landing_images/news/news-1.jpg" class="lightbox-image" data-fancybox="gallery"><i class="flaticon-zoom"></i></a>
-                        </figure>
-                        <div class="lower-content">
-                            <div class="file-box"><i class="far fa-folder-open"></i><p>Data Engineering</p></div>
-                            <div class="title-box">
-                                <div class="post-date"><p>05</p><span>Jan</span></div>
-                                <h4><a href="blog-details.html">Naxly Named as a Global Leader in Big Data</a></h4>
-                            </div>
-                            <div class="link"><a href="blog-details.html"><i class="flaticon-next"></i>More Details</a></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 news-block">
-                <div class="news-block-one wow fadeInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
-                    <div class="inner-box">
-                        <figure class="image-box">
-                            <img src="/assets/landing_images/news/news-4.jpg" alt="">
-                            <a href="/assets/landing_images/news/news-4.jpg" class="lightbox-image" data-fancybox="gallery"><i class="flaticon-zoom"></i></a>
-                        </figure>
-                        <div class="lower-content">
-                            <div class="file-box"><i class="far fa-folder-open"></i><p>ML Consulting</p></div>
-                            <div class="title-box">
-                                <div class="post-date"><p>01</p><span>Jan</span></div>
-                                <h4><a href="blog-details.html">The Current State of Artificial Intelligence Infographic.</a></h4>
-                            </div>
-                            <div class="link"><a href="blog-details.html"><i class="flaticon-next"></i>More Details</a></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 news-block">
-                <div class="news-block-one wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
-                    <div class="inner-box">
-                        <figure class="image-box">
-                            <img src="/assets/landing_images/news/news-5.jpg" alt="">
-                            <a href="/assets/landing_images/news/news-5.jpg" class="lightbox-image" data-fancybox="gallery"><i class="flaticon-zoom"></i></a>
-                        </figure>
-                        <div class="lower-content">
-                            <div class="file-box"><i class="far fa-folder-open"></i><p>Data Strategy</p></div>
-                            <div class="title-box">
-                                <div class="post-date"><p>25</p><span>Dec</span></div>
-                                <h4><a href="blog-details.html">Naxly as the Winners in Global Agency Awards</a></h4>
-                            </div>
-                            <div class="link"><a href="blog-details.html"><i class="flaticon-next"></i>More Details</a></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+  <!-- <%#= render 'pages/shared/nuevos' %> -->
 <!-- NUEVOS END -->
-
-
-<!--Scroll to top-->
-<button class="scroll-top scroll-to-target" data-target="html">
-    <span class="fas fa-angle-up"></span>
-</button>
 
 <section class="industries-section">
   <div class="pattern-layer">
@@ -403,6 +252,12 @@
     </div>
   </div>
 </section>
+
+
+<!--Scroll to top-->
+<button class="scroll-top scroll-to-target" data-target="html">
+    <span class="fas fa-angle-up"></span>
+</button>
 
 <!-- jequery plugins -->
 <script src="assets/js/jquery.js"></script>
