main layout ready

--- a/app/views/contact_mailer/new_contact_to_user.html.erb
+++ b/app/views/contact_mailer/new_contact_to_user.html.erb
@@ -1,4 +1,4 @@
-<h1>PSKL</h1>
+<h1>SKL</h1>
 <h2>Detalles de la solicitud</h2>
 <p>Nombre: <%= @contact.first_name %> <%= @contact.last_name %></p>
 <p>Empresa: <%= @contact.empresa %></p>
