--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -15,6 +15,8 @@
   </head>
 
   <body class="boxed_wrapper">
-    <%= yield %>
+    <div data-controller="landing">
+      <%= yield %>
+    </div>
   </body>
 </html>
