--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -12,6 +12,9 @@
 
     <!-- Stylesheets -->
     <%= stylesheet_link_tag "application_landing", "data-turbo-track": "reload" %>
+
+    <!-- Javascript -->
+    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body class="boxed_wrapper">
